[package]
name = "minimal-cookie-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.97"
dioxus = { version = "0.6.3", features = ["web", "fullstack", "router"] }
tower-cookies = {version = "0.11.0"}
tokio = {version = "1.43.0", optional = true}
axum = { version = "0.7.9", optional = true }
dioxus-cli-config = "0.6.3"
serde = "1.0.219"
web-sys = "0.3.77"
js-sys = "0.3.77"

[features]
web = ["dioxus/web"]
server = ["dioxus/server", "dep:tokio", "dep:axum"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"


# # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html